# aisci

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  TROUBLESHOOTING.md  pyproject.toml
.agents/skills/: experiment  experiment-step  ideation  lit-search  pipeline  plot  review  writeup
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: ai-scientist.md  ai-scientist:experiment-step.md  ai-scientist:experiment.md  ai-scientist:ideation.md  ai-scientist:lit-search.md  ai-scientist:plot.md  ai-scientist:review.md  ai-scientist:workshop.md  ai-scientist:writeup.md
examples/ideas/: selected_idea.json  task_adaptive_metric_fewshot.json  task_adaptive_metric_fewshot.md
scripts/: install.sh  pre-commit-check.py
skills/ai-scientist/: SKILL.md
skills/aisci/: SKILL.md
skills/experiment/: SKILL.md
skills/experiment-execute/: SKILL.md
skills/experiment-generate/: SKILL.md
skills/experiment-step/: SKILL.md
skills/ideation/: SKILL.md
skills/lit-search/: SKILL.md
skills/octo-review/: SKILL.md
skills/pipeline/: SKILL.md
skills/plot/: SKILL.md
skills/review/: SKILL.md
skills/workshop/: SKILL.md
skills/writeup/: SKILL.md
templates/: bfts_config.yaml
templates/latex/icbinb/: template.tex
templates/latex/icml/: template.tex
tools/: __init__.py  budget_estimator.py  config.py  dashboard.py  device_utils.py  error_classifier.py  latex_compiler.py  metric_parser.py  modal_runner.py  multi_seed_runner.py  pdf_reader.py  search.py  state_manager.py  stats.py  verify_setup.py
tools/templates/: bfts_config.yaml  idea_schema.json
